k8s/demodb.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: northwind-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: northwind-database
  template:
    metadata:
      labels:
        app: northwind-database
    spec:
      containers:
        - name: northwind-database
          image: postgres:latest
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
kind: Service
apiVersion: v1
metadata:
  name: northwind-database
spec:
  selector:
    app: northwind-database
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
