k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datamcp-api
  namespace: datamcp
spec:
  selector:
    matchLabels:
      app: datamcp-api
  replicas: 1
  template:
    metadata:
      labels:
        app: datamcp-api
    spec:
      containers:
      - name: api
        image: erezalster/datamcp:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: datamcp-api
  namespace: datamcp
spec:
  selector:
    app: datamcp-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
